// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightHero component renders correctly 1`] = `
<div
  class="SpotlightHero"
>
  <div
    class="image"
  >
    <div
      class="header"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root header-container MuiContainer-maxWidthXl"
        >
          <div
            class="breadcrumbs"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 buttonStyles-textDarkBg-6 button link MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label buttonStyles-label-4"
                    >
                      <span
                        class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root icon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="label"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root title Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="content"
        >
          <div
            class="text"
          >
            <p
              class="MuiTypography-root Typography MuiTypography-body1"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="overlay overlay--blue"
    >
      <img
        alt="Lorem ipsum"
        class="Media"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;

exports[`SpotlightHero component renders with cta 1`] = `
<div
  class="SpotlightHero"
>
  <div
    class="image"
  >
    <div
      class="header"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root header-container MuiContainer-maxWidthXl"
        >
          <div
            class="breadcrumbs"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 buttonStyles-textDarkBg-44 button link MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label buttonStyles-label-42"
                    >
                      <span
                        class="MuiButton-startIcon buttonStyles-startIcon-43 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root icon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="label"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root title Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="content"
        >
          <div
            class="text"
          >
            <p
              class="MuiTypography-root Typography MuiTypography-body1"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-outlined buttonStyles-outlinedDarkBg-45 cta MuiButton-outlinedPrimary"
            label="CTA action"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-42"
            >
              CTA action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="overlay overlay--blue"
    >
      <img
        alt="Lorem ipsum"
        class="Media"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;

exports[`SpotlightHero component renders with deprecated imageSource 1`] = `
<div
  class="SpotlightHero"
>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  >
    <div
      class="header"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root header-container MuiContainer-maxWidthXl"
        >
          <div
            class="breadcrumbs"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-text buttonStyles-text-21 buttonStyles-textDarkBg-25 button link MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label buttonStyles-label-23"
                    >
                      <span
                        class="MuiButton-startIcon buttonStyles-startIcon-24 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root icon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="label"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root title Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="content"
        >
          <div
            class="text"
          >
            <p
              class="MuiTypography-root Typography MuiTypography-body1"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="overlay overlay--blue"
    />
  </div>
</div>
`;

exports[`SpotlightHero component renders with keyline for brand 1`] = `
<div
  class="SpotlightHero SpotlightHero--keyline"
>
  <div
    class="image"
  >
    <div
      class="header"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root header-container MuiContainer-maxWidthXl"
        >
          <div
            class="breadcrumbs"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-text buttonStyles-text-59 buttonStyles-textDarkBg-63 button link MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label buttonStyles-label-61"
                    >
                      <span
                        class="MuiButton-startIcon buttonStyles-startIcon-62 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root icon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="label"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root title Typography Typography--underline Typography--underline--dark-bg MuiTypography-h1"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="content"
        >
          <div
            class="text"
          >
            <p
              class="MuiTypography-root Typography MuiTypography-body1"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="overlay overlay--blue"
    >
      <img
        alt="Lorem ipsum"
        class="Media"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;
